kompose_production_ver1/backup/react-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: react-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    kubernetes.io/ingress.global-static-ip-name: "geneesplaats-nl-static-ip"
spec:
  tls:
  - hosts:
    - geneesplaats.nl
    secretName: geneesplaats-nl-ingress-secret
  rules:
  - host: geneesplaats.nl
    http:
      paths:
      - path: /*
        backend:
          serviceName: react
          servicePort: 8000
